--- a/engines/core/app/assets/stylesheets/erp/application.css.scss
+++ b/engines/core/app/assets/stylesheets/erp/application.css.scss
@@ -1,7 +1,4 @@
 //= require_tree .
 //= require_self
-@import "bootstrap";
-
-body {
-	background-color: lightblue;
-}
+// @import "bootstrap";
+// @import "tailwind/utilities";
