--- a/engines/core/app/views/devise/registrations/new.html.erb
+++ b/engines/core/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,42 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="flex items-center justify-center">
+        <div class="w-full max-w-md mt-10">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <div class="bg-gray-100 shadow-lg rounded px-12 pt-6 pb-8 mb-4">
+            <!-- @csrf -->
+            <div
+              class="text-gray-800 text-2xl flex justify-center border-b-2 py-2 mb-4"
+            >
+              Sign up
+            </div>
+            <div class="mb-4">
+              <%= f.label :email, class: "block text-gray-700 text-sm font-normal mb-2" %>
+                <%= f.email_field :email,
+                  autofocus: true, autocomplete: "email",
+                  class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                %>
+            </div>
+            <div class="mb-6">
+                <%= f.label :password, class: "block text-gray-700 text-sm font-normal mb-2" %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password,
+                  autocomplete: "current-password",
+                  class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                %>
+            </div>
+            <div class="mb-6">
+                <%= f.label :password_confirmation, class: "block text-gray-700 text-sm font-normal mb-2" %>
+                <%= f.password_field :password_confirmation,
+                  autocomplete: "current-password",
+                  class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                %>
+            </div>
+            <div class="flex items-center justify-between">
+              <%= f.submit "Sign up", class: "px-4 py-2 rounded text-white inline-block shadow-lg bg-blue-500 hover:bg-blue-600 focus:bg-blue-700" %>
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>
+      <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
