--- a/engines/core/app/views/erp/admin/admin/index.html.erb
+++ b/engines/core/app/views/erp/admin/admin/index.html.erb
@@ -1,15 +1,19 @@
+<div class="flex m-1">Count: <%= Erp::User.all.length %></div>
 <% @users.each do |user| %>
 <div class="flex justify-between items-center m-5 p-3 border border-gray-200 rounded shadow">
-	<div class="w-2/3 text-gray-700">
-		<div class="text-sm"><%= user.email %></div>
+	<div class="w-7/8 text-gray-700">
+		<div class="text-xl font-medium"><%= user.email %></div>
 		<div class="text-sm"><%= user.created_at %></div>
-	</div>
-    <div class="w-1/3 text-right" >
       <% if user.admin? %>
-        Admin
+        <span class="font-bold text-blue-800">Admin</span>
       <% else %>
-        Normal
+        <span  class="italic text-blue-800">Normal</span>
       <% end %>
+	</div>
+    <div class="w-1/8 text-right" >
+      <a href="/admin/users/<%= user.id %>/edit" class="mx-2 text-blue-600">Edit</a>
+      <%# <a href="" class="mx-2 text-red-600">Delete</a> %>
+      <%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }, class: "mx-2 text-red-600" %>
     </div>
 </div>
 <% end %>
