--- a/engines/core/app/views/erp/carts/index.html.erb
+++ b/engines/core/app/views/erp/carts/index.html.erb
@@ -1,25 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div class="bg-white pb-4 px-4 rounded-md w-full">
 
-<h1>Carts</h1>
+    <div class="overflow-x-auto mt-6">
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table class="table-auto border-collapse w-full">
+        <thead>
+          <tr class="rounded-lg text-sm font-medium text-gray-700 text-left" style="font-size: 0.9674rem">
+            <th class="px-4 py-2 bg-gray-200 " style="background-color:#f8f8f8">Title</th>
+            <th class="px-4 py-2 " style="background-color:#f8f8f8">Created At</th>
+            <th class="px-4 py-2 " style="background-color:#f8f8f8">Price</th>
+            <th class="px-4 py-2 " style="background-color:#f8f8f8">Quantity</th>
+          </tr>
+        </thead>
+        <tbody class="text-sm font-normal text-gray-700">
 
-  <tbody>
-    <% @carts.each do |cart| %>
-      <tr>
-        <td><%= link_to 'Show', cart %></td>
-        <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
-        <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <% @list_items.each do |item| %>
+            <tr class="hover:bg-gray-100 border-b border-gray-200 py-10">
+              <td class="px-4 py-4"><%= item.book.title %></td>
+              <td class="px-4 py-4"><%= item.book.created_at %></td>
+              <td class="px-4 py-4"><%= item.book.price %> $</td>
+              <td class="px-4 py-4"><%= item.quantity %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
 
-<br>
+    </div>
 
-<%= link_to 'New Cart', new_cart_path %>
+<style>
+
+thead tr th:first-child { border-top-left-radius: 10px; border-bottom-left-radius: 10px;}
+thead tr th:last-child { border-top-right-radius: 10px; border-bottom-right-radius: 10px;}
+
+tbody tr td:first-child { border-top-left-radius: 5px; border-bottom-left-radius: 0px;}
+tbody tr td:last-child { border-top-right-radius: 5px; border-bottom-right-radius: 0px;}
+
+
+</style>
