--- a/engines/core/app/views/layouts/erp/application.html.erb
+++ b/engines/core/app/views/layouts/erp/application.html.erb
@@ -63,11 +63,11 @@
 <nav class="bg-gray-200 font-sans flex flex-col text-center sm:flex-row sm:text-left sm:justify-between py-4 px-6 bg-white shadow sm:items-baseline">
   <div><a href="/" class="text-2xl no-underline text-gray-darkest">PatrickStore</a></div>
   <div>
-  <a href="/orders" class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-4">
-    Orders
+  <a href="/carts" class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-4">
+    Cart <%= cart_count %>
   </a>
   <a href="<%= user_path(current_user.id) %>" class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-4">
-    Accounts
+    Account
   </a>
     <% if current_user.admin? %>
       <a href="/admin" class="text-lg no-underline text-grey-darkest hover:text-blue-dark ml-4">
