--- a/engines/core/app/views/erp/carts/index.html.erb
+++ b/engines/core/app/views/erp/carts/index.html.erb
@@ -28,6 +28,10 @@
           <% end %>
         </tbody>
       </table>
+      <div class="bg-gray-100 p-2 m-2 font-bold ">
+        Total Price:<span class="text-xl text-yellow-600"> <%= cart_total(@list_items) %></span>$
+      </div>
+
     <% else %>
       <div class="bg-orange-lightest border-l-4 border-orange text-orange-dark p-4" role="alert">
         <p class="font-bold">Cart empty</p>
