--- a/engines/core/app/views/erp/orders/index.html.erb
+++ b/engines/core/app/views/erp/orders/index.html.erb
@@ -1,27 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Orders</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Code</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.code %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="bg-white pb-4 px-4 rounded-md w-full">
+  <div class="overflow-x-auto mt-6">
+    <% if @orders.first %>
+     <%= render 'orders' %>
+    <% else %>
+      <div class="bg-orange-lightest border-l-4 border-orange text-orange-dark p-4" role="alert">
+        <p class="font-bold">Order empty</p>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
 
-<br>
+<style>
 
-<%= link_to 'New Order', new_order_path %>
+thead tr th:first-child { border-top-left-radius: 10px; border-bottom-left-radius: 10px;}
+thead tr th:last-child { border-top-right-radius: 10px; border-bottom-right-radius: 10px;}
+
+tbody tr td:first-child { border-top-left-radius: 5px; border-bottom-left-radius: 0px;}
+tbody tr td:last-child { border-top-right-radius: 5px; border-bottom-right-radius: 0px;}
+
+
+</style>
